--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "start": "webpack-dev-server",
     "dev": "webpack-dev-server && set NODE_ENV=development",
     "prod": "npm run clean && yarn run clean && set NODE_ENV=production && webpack -p",
-    "clean": "rimraf ./dist/*"
+    "clean": "rimraf ./dist/*",
+    "lint": "eslint src"
   },
   "author": "Riwan Zaheer\t",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^7.2.3",
     "bootstrap": "v4.0.0-alpha.6",
     "bootstrap-loader": "^2.1.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
