--- a/.bootstraprc
+++ b/.bootstraprc
@@ -3,16 +3,15 @@
 # loglevel: debug
 
 # Major version of Bootstrap: 3 or 4
-bootstrapVersion: 4
+bootstrapVersion: 3
 
-# If Bootstrap version 4 is used - turn on/off flexbox model
-useFlexbox: true
+# If Bootstrap version 3 is used - turn on/off custom icon font path
+useCustomIconFontPath: false
 
 # Webpack loaders, order matters
 styleLoaders:
   - style
   - css
-  - postcss
   - sass
 
 # Extract styles to stand-alone css file
@@ -57,56 +56,61 @@ styles:
   # Reset and dependencies
   normalize: true
   print: true
+  glyphicons: true
 
   # Core CSS
-  buttons: true
-  code: true
-  forms: true
-  grid: true
-  images: true
-  reboot: true
-  tables: true
+  scaffolding: true
   type: true
+  code: true
+  grid: true
+  tables: true
+  forms: true
+  buttons: true
 
   # Components
-  alert: true
-  badge: true
-  breadcrumb: true
-  button-group: true
-  card: true
-  close: true
-  custom-forms: true
-  dropdown: true
-  input-group: true
-  jumbotron: true
-  list-group: true
-  media: true
-  nav: true
+  component-animations: true
+  dropdowns: true
+  button-groups: true
+  input-groups: true
+  navs: true
   navbar: true
+  breadcrumbs: true
   pagination: true
-  progress: true
+  pager: true
+  labels: true
+  badges: true
+  jumbotron: true
+  thumbnails: true
+  alerts: true
+  progress-bars: true
+  media: true
+  list-group: true
+  panels: true
+  wells: true
   responsive-embed: true
-  transitions: true
+  close: true
 
   # Components w/ JavaScript
-  carousel: true
-  modal: true
-  popover: true
+  modals: true
   tooltip: true
+  popovers: true
+  carousel: true
 
   # Utility classes
   utilities: true
+  responsive-utilities: true
 
 ### Bootstrap scripts
 scripts:
+  transition: true
   alert: true
   button: true
   carousel: true
   collapse: true
   dropdown: true
   modal: true
+  tooltip: true
   popover: true
   scrollspy: true
   tab: true
-  tooltip: true
-  util: true
+  affix: true
