--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-starter-kit",
+  "name": "embrace-it",
   "version": "1.0.0",
-  "description": "Webpack Starter kit",
+  "description": "Embrace it",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
@@ -14,7 +14,6 @@
   "license": "MIT",
   "dependencies": {
     "babel-eslint": "^7.2.3",
-    "bootstrap": "v4.0.0-alpha.6",
     "bootstrap-loader": "^2.1.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
@@ -25,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "exports-loader": "^0.6.4",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "import-loader": "^1.0.1",
@@ -33,13 +33,17 @@
     "node-sass": "^4.5.3",
     "postcss": "^6.0.1",
     "postcss-loader": "^2.0.5",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-responsive-carousel": "^3.1.19",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "tether": "^1.4.0",
-    "url-loader": "^0.5.8"
+    "url-loader": "^0.5.8",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -50,6 +54,7 @@
     "babel-preset-react": "^6.24.1",
     "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.1",
+    "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
