--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-responsive-carousel": "^3.1.19",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
