--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "exports-loader": "^0.6.4",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "autoprefixer": "^7.1.2",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
     "import-loader": "^1.0.1",
