--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react with webpack 2 starter kit",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "nodemon server.js",
     "dev": "webpack-dev-server && set NODE_ENV=development",
     "prod": "npm run clean && yarn run clean && set NODE_ENV=production && webpack -p",
     "clean": "rimraf ./dist/*",
@@ -13,7 +13,9 @@
   "author": "Riwan Zaheer\t",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^7.1.2",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.2",
     "bootstrap-loader": "^2.1.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
@@ -25,14 +27,16 @@
     "eslint-plugin-react": "^7.0.1",
     "exports-loader": "^0.6.4",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "autoprefixer": "^7.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.1",
     "history": "^4.6.1",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.3.1",
     "import-loader": "^1.0.1",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
     "postcss": "^6.0.1",
     "postcss-loader": "^2.0.5",
     "purify-css": "^1.2.5",
@@ -43,22 +47,19 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.5",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.17.0",
     "tether": "^1.4.0",
     "url-loader": "^0.5.8",
-    "file-loader": "^0.11.1",
-    "image-webpack-loader": "^3.3.1",
-    "nodemon": "^1.11.0",
-    "rimraf": "^2.6.1",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack": "^3.5.5",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-hot-middleware": "^2.18.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1"
