--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "dev": "webpack-dev-server && set NODE_ENV=development",
-    "prod": "npm run clean && yarn run clean && set NODE_ENV=production && webpack -p",
+    "prod": "npm run clean && yarn run clean && set NODE_ENV=production && webpack -p --progress",
     "clean": "rimraf ./dist/*",
     "lint": "eslint src"
   },
