--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
-    "presets" : ["es2015", "react", "env"]
+  "presets": ["es2015", "react", "env", "flow"],
+  "plugins": [
+    [
+      "import",
+      [
+        {
+          "libraryName": "antd",
+          "libraryDirectory": "lib", // default: lib
+          "style": true
+        },
+        {
+          "libraryName": "antd-mobile"
+        }
+      ]
+    ]
+  ]
 }
