--- a/.flowconfig
+++ b/.flowconfig
@@ -1,5 +1,6 @@
 [ignore]
 .*/node_modules/.*
+.*/dist/.*
 
 [include]
 .*/src/.*
@@ -7,8 +8,14 @@
 [libs]
 flow-typed
 
+[lints]
+all=warn
+untyped-type-import=error
+sketchy-null-bool=off
+
 [options]
 module.system.node.resolve_dirname=src
+emoji=true
 module.file_ext=.js
 module.file_ext=.json
 module.file_ext=.jsx
