--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "dev": "webpack-dev-server && set NODE_ENV=development",
+    "dev": "webpack-dev-server && set NODE_ENV=development && npm run flow",
     "prod": "npm run clean && yarn run clean && set NODE_ENV=production && webpack -p --progress",
     "clean": "rimraf ./dist/*",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "flow": "yarn add --dev flow-bin"
   },
   "author": "Riwan Zaheer\t",
   "license": "MIT",
   "dependencies": {
+    "antd": "^2.13.4",
     "autoprefixer": "^7.1.4",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
     "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.7",
+    "enzyme": "^3.1.0",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-babel": "^4.1.2",
@@ -42,8 +46,10 @@
     "purifycss-webpack": "^0.7.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-lazy-load": "^3.0.12",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.15.4",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
@@ -57,9 +63,13 @@
   },
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-import": "^1.6.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "flow-bin": "^0.56.0"
   }
 }
