--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src",
     "flow": "yarn add --dev flow-bin"
   },
-  "author": "Riwan Zaheer\t",
+  "author": "Riwan Zaheer",
   "license": "MIT",
   "dependencies": {
     "antd": "^2.13.4",
@@ -70,6 +70,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "flow-bin": "^0.56.0"
+    "flow-bin": "^0.56.0",
+    "less": "^3.0.0-alpha.3",
+    "less-loader": "^4.0.5",
+    "less-vars-to-js": "^1.2.0"
   }
 }
